# dagster_people_team_pipeline

./: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  init-dagster-db.sh
.dlt/: .sources  config.toml  secrets.toml
.github/workflows/: branch_deployments.yml  deploy.yml
dbt/CalibrateData/: dbt_project.yml
people_team_data/: __init__.py  dagster.yaml  definitions.py
people_team_data/assets/: __init__.py  bamboohr.py  discrepancy_reports.py  paycom.py  position_control.py
people_team_data/assets/dbt/: assets.py  dbt_project.yml  project.py  schedules.py
people_team_data/assets/dbt/.dbt/: profiles.yml
people_team_data/assets/dbt/models/staff/: employee.sql  mrt_employee.sql  rpt_staff_diffs.sql  schema.yml  sources.yaml  stg_bamboohr.sql  stg_paycom.sql  stg_position_control_adjustments.sql  stg_position_control_assignments.sql  stg_position_control_employees.sql  stg_position_control_positions.sql  stg_position_control_stipends.sql
people_team_data/assets/dbt_models/: dbt_project.yml  package-lock.yml  packages.yml
people_team_data/assets/dbt_models/models/example/: normalize_paycom_data.py
people_team_data/assets/dbt_models/models/staff/: schema.yml  sources.yaml
people_team_data/assets/dlt_sources/: allfields.txt  bamboo_api_pipeline.py  dagster_assets.py  paycom_pipeline.py  position_control_pipeline.py
people_team_data/assets/dlt_sources/bamboohr/: fields.json  schema.py
people_team_data/config/: asset_configs.py
people_team_data/config/dbt/: assets.py  definitions.py
people_team_data/config/dbt/models/staff/: rpt_staff_diffs.sql  stg_paycom.sql  stg_position_control_assignments.sql  stg_position_control_employees.sql  stg_position_control_stipends.sql
people_team_data/dbt/calibrate_data/: dbt_project.yml
people_team_data/dbt/models/: paycom_employee_data.sql
people_team_data/dlt/: bamboo_api_pipeline.py  calibrate_pipeline.py  filesystem_pipeline.py  paycom_pipeline.py  positions_control_pipeline.py  requirements.txt  rest_api_pipeline.py
people_team_data/dlt/.dlt/: config.toml
people_team_data/dlt/bucket_url/bamboo_data/_dlt_loads/: rest_api__1738971072.196021.jsonl
people_team_data/partitions/: time_partitions.py
people_team_data/resources/: __init__.py  db_resource.py  dlt_resource.py  google_service_account_resource.py  postgres_db_resource.py
people_team_data/utils/: __init__.py  constants.py
scratch/: requirements.txt
(+26 files in other folders)
