[project]
name = "people_team_data"
version = "0.1.0"
description = "Project to create a people team data pipeline for Caliber Public Schools"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "dagit==1.9.8",
    "dagster==1.9.8",
    "dagster-cloud==1.9.8",
    "dagster-cloud-cli==1.9.8",
    "dagster-duckdb==0.25.8",
    "dagster-graphql==1.9.8",
    "dagster-gcp==0.25.8",
    "dagster-pandas==0.25.8",
    "dagster-pipes==1.9.8",
    "dagster-webserver==1.9.8",
    "requests==2.32.3",
    "duckdb==1.1.3",
    "duckdb_engine==0.15.0",
    "pandas==2.2.3",
    "gspread==6.1.4"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
    "black==24.10.0",
    "isort==5.11.5"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "people_team_data.definitions"
project_name = "people_team_data"

[tool.setuptools.packages.find]
exclude=["people_team_data_tests"]

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
