[project]
name = "people_team_data"
version = "0.1.0"
description = "Project to create a people team data pipeline for Caliber Public Schools"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dynamic = ["authors", "classifiers"]
dependencies = [
    "black",
    "dagit",
    "dagster",
    "dagster-cloud",
    "dagster-cloud-cli",
    "dagster-dbt",
    "dagster-dlt",
    "dagster-gcp",
    "dagster-gcp-pandas",
    "dagster-graphql",
    "dagster-pandas",
    "dagster-pipes",
    "dagster-postgres",
    "dagster-webserver",
    "dbt",
    "dbt-bigquery",
    "dbt-postgres",
    "dbt-python",
    "dlt[bigquery,filesystem,sqlalchemy,duckdb,postgres]",
    "duckdb",
    "google-cloud-bigquery-storage",
    "google-api-python-client",
    "gspread",
    "isort",
    "pandas",
    "psutil",
    "psycopg2",
    "requests",
    "streamlit",
    "tink",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
    "black",
    "isort",
    "sqlfmt",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "people_team_data.definitions"
project_name = "people_team_data"

[tool.setuptools.packages.find]
exclude=["people_team_data_tests"]

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"

